@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-03-30T08:10:13Z",
-  "count" : 14,
-  "count_minmax" : [ 0, 14 ],
+  "timestamp" : "2022-03-31T00:33:19Z",
+  "count" : 38,
+  "count_minmax" : [ 0, 38 ],
   "count_prev_day_inc" : 68,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
