@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-03-30T08:10:13Z",
+  "timestamp" : "2022-03-31T00:33:19Z",
   "count_outdated" : 546,
   "uniques_outdated" : 35,
-  "count" : 801,
+  "count" : 825,
   "uniques" : 44,
   "views" : [
     {
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-03-30T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 0, 14 ],
+      "count": 38,
+      "count_minmax": [ 0, 38 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
